kubernetes/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: personal-tilen
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: registry.ventic.tv/personal/tilen/portfolio:1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: '0.25'
            limits:
              memory: 512Mi
